--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<link href="\Users\Tarun\Documents\dev\website\static\css\font-awesome.css" rel="stylesheet">
+		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	</head>
-.css
 
 	<body>
 
