--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 		<div class= "tarun">
 		<div class= "favorites">	
-			 <h1>Reccomended Youtube Videos</h1> 
+			 <h1>Recommended Youtube Videos</h1> 
 		<iframe width="560" height="315" src="http://www.youtube.com/embed/5uWJHvHFkpY" frameborder="0" allowfullscreen></iframe>
 		<iframe width="560" height="315" src="http://www.youtube.com/embed/dl1vISKSn-4" frameborder="0" allowfullscreen></iframe>
 
